--- a/.github/workflows/github-actions-conf.yml
+++ b/.github/workflows/github-actions-conf.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -26,4 +26,6 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=.venv
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=140 --ignore=W605 --statistics --exclude=.venv
-        pytest .
+    - name: Test with pytest
+      run: |
+        pytest
